--- a/setup.cfg
+++ b/setup.cfg
@@ -4,3 +4,8 @@ max-line-length = 99
 [coverage:run]
 branch=True
 include=connectsensor/*.py
+
+[tool:pytest]
+addopts = -ra -q -W ignore::DeprecationWarning
+testpaths = tests
+python_files = *.py
