--- a/setup.cfg
+++ b/setup.cfg
@@ -1,11 +1,91 @@
 [flake8]
-max-line-length = 99
+# build settings
+[metadata]
+name = kingspan-connect-sensor
+version = attr: connectsensor._version.__version__
+author = Jon Connell
+author_email = python@figsandfudge.com
+license = MIT
+description = API to get oil tank from Kingspan SENSiT sensors
+long_description = file: README.md
+long_description_content_type = text/markdown
+url = https://github.com/masaccio/kingspan-connect-sensor
+classifiers =
+    Development Status :: 5 - Production/Stable
+    Intended Audience :: Developers
+    Intended Audience :: System Administrators
+    License :: OSI Approved :: MIT License
+    Programming Language :: Python
+    Programming Language :: Python :: 3
+    Programming Language :: Python :: 3 :: Only
 
-[coverage:run]
-branch=True
-include=connectsensor/*.py
+[options]
+python_requires = >= 3.6
+test_suite = tests
+package_dir=
+    =src
+packages=find:
+install_requires =
+    zeep
+    pandas
+tests_require = 
+    pytest
 
+
+[options.entry_points]
+console_scripts =
+    kingspan-notifier = scripts/kingspan-notifier.py:main
+    kingspan-status = scripts/kingspan-status:main
+    kingspan-export = scripts/kingspan-export:main
+
+
+# pytest settings
 [tool:pytest]
-addopts = -ra -q -W ignore::DeprecationWarning
+minversion = 5.4
+addopts = -ra -s
 testpaths = tests
 python_files = *.py
+script_launch_mode = subprocess
+
+
+# tox settings
+[tox:tox]
+envlist = py38, py39
+
+[testenv]
+deps =
+    pytest
+    pytest-check
+    pytest-console-scripts
+commands =
+    pytest
+
+
+# linter settings
+[pylama]
+format = pylint
+skip = .tox/*,tests/*.py
+
+[pylama:pyflakes]
+builtins = _
+
+[pylama:pycodestyle]
+max_line_length = 100
+ignore=E203, E265, W503
+
+[pylama:pylint]
+max_line_length = 100
+
+
+# coverage settings
+[coverage:run]
+branch = True
+
+[coverage:html]
+directory = coverage_html_report
+
+
+# docs settings
+[build_sphinx]
+source-dir = doc/
+build-dir = doc/build/
