Fixed console script setup

--- a/setup.cfg
+++ b/setup.cfg
@@ -22,8 +22,6 @@ classifiers =
 [options]
 python_requires = >= 3.6
 test_suite = tests
-package_dir=
-    =src
 packages=find:
 install_requires =
     zeep
@@ -34,9 +32,9 @@ tests_require =
 
 [options.entry_points]
 console_scripts =
-    kingspan-notifier = scripts/kingspan-notifier.py:main
-    kingspan-status = scripts/kingspan-status:main
-    kingspan-export = scripts/kingspan-export:main
+    kingspan-notifier = connectsensor._kingspan_notifier:main
+    kingspan-status = connectsensor._kingspan_status:main
+    kingspan-export = connectsensor._kingspan_export:main
 
 
 # pytest settings
