--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ python:
  - "3.9"
 install:
   - pip install -U -r requirements.txt
+  - python3 -m pip install --upgrade attrs
   - python3 setup.py install
 script:
   - python3 -m pytest tests
