--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,20 +18,22 @@ repository = "https://github.com/masaccio/kingspan-connect-sensor"
 version = "1.0.1"
 
 [tool.poetry.dependencies]
+asyncio = "^3.4.3"
+datetime = "^4.7"
+logging = "^0.4.9.6"
 pandas = "^1.5.1"
+pytest = "7.1.3"
 python = "^3.9"
 requests = "^2.28.1"
 xlsxwriter = "^3.0.3"
 zeep = "^4.2.0"
-datetime = "^4.7"
-asyncio = "^3.4.3"
-logging = "^0.4.9.6"
 
 [tool.poetry.group.dev.dependencies]
-pytest = "^7.2.0"
+pytest = "^7.1.0"
 pytest-check = "^1.0.10"
 pytest-console-scripts = "^1.3.1"
-pytest-cov = "^4.0.0"
+pytest-cov = "^3.0.0"
+pytest-homeassistant-custom-component = "^0.12.20"
 
 [build-system]
 build-backend = "poetry.core.masonry.api"
@@ -49,15 +51,16 @@ branch = true
 directory = "coverage_html_report"
 
 [tool.pytest.ini_options]
-addopts = "-ra -s"
+addopts = "-ra -s -W ignore::DeprecationWarning"
 minversion = 6.0
 pythonpath = [".", "tests"]
+testpaths = ["tests"]
 
 [tool.tox]
 legacy_tox_ini = """
 [tox]
 isolated_build = true
-envlist = py38, py39, py310, py311
+envlist = py39, py310, py311
 [testenv]
 allowlist_externals = poetry
 commands_pre = poetry install --no-root --sync
