--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ datetime = "^4.7"
 logging = "^0.4.9.6"
 pandas = "^1.5.1"
 pytest = "7.1.3"
+pytest-homeassistant-custom-component = "^0.12.20"
 python = "^3.9"
 requests = "^2.28.1"
 xlsxwriter = "^3.0.3"
@@ -60,7 +61,7 @@ testpaths = ["tests"]
 legacy_tox_ini = """
 [tox]
 isolated_build = true
-envlist = py39, py310, py311
+envlist = py39, py310
 [testenv]
 allowlist_externals = poetry
 commands_pre = poetry install --no-root --sync
