--- a/custom_components/kingspan_connect/manifest.json
+++ b/custom_components/kingspan_connect/manifest.json
@@ -1,6 +1,6 @@
 {
   "domain": "kingspan_connect",
-  "name": "Kingspan Connect Sensor",
+  "name": "Kingspan Connect Sensor integration for Home Assistant",
   "documentation": "https://github.com/masaccio/kingspan-connect-sensor",
   "iot_class": "cloud_polling",
   "issue_tracker": "https://github.com/masaccio/kingspan-connect-sensor/issues",
@@ -10,4 +10,3 @@
     "@masaccio"
   ],
   "requirements": ["kingspan-connect-sensor"]
-}
