--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,7 @@ name = "kingspan-connect-sensor"
 packages = [{include = "connectsensor", from = "src"}]
 readme = "README.md"
 repository = "https://github.com/masaccio/kingspan-connect-sensor"
-version = "1.0.1"
+version = "2.0.0"
 
 [tool.poetry.dependencies]
 asyncio = "^3.4.3"
@@ -23,18 +23,18 @@ datetime = "^4.7"
 logging = "^0.4.9.6"
 pandas = "^1.5.1"
 pytest = "7.1.3"
-pytest-homeassistant-custom-component = "^0.12.20"
 python = "^3.9"
 requests = "^2.28.1"
 xlsxwriter = "^3.0.3"
 zeep = "^4.2.0"
 
 [tool.poetry.group.dev.dependencies]
+aiofiles = "^22.1.0"
+black = {version = "^22.10.0", allow-prereleases = true}
 pytest = "^7.1.0"
-pytest-check = "^1.0.10"
+pytest-asyncio = "^0.20.2"
 pytest-console-scripts = "^1.3.1"
 pytest-cov = "^3.0.0"
-pytest-homeassistant-custom-component = "^0.12.20"
 
 [build-system]
 build-backend = "poetry.core.masonry.api"
