--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,8 @@ python = "^3.9"
 requests = "^2.28.1"
 xlsxwriter = "^3.0.3"
 zeep = "^4.2.0"
+httpx = "^0.23.1"
+async-property = "^0.2.1"
 
 [tool.poetry.group.dev.dependencies]
 aiofiles = "^22.1.0"
