--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,7 +22,7 @@ async-property = "^0.2.1"
 asyncio = "^3.4.3"
 datetime = "^4.7"
 httpx = "^0.23.1"
-logging = "^0.4.9.6"
+# logging = "^0.4.9.6"
 pandas = "^1.5.1"
 pytest = "7.1.3"
 python = "^3.9"
@@ -63,7 +63,7 @@ testpaths = ["tests"]
 legacy_tox_ini = """
 [tox]
 isolated_build = true
-envlist = py39, py310
+envlist = py39, py310, py311
 [testenv]
 allowlist_externals = poetry
 commands_pre = poetry install --no-root --sync
