--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@ history.db
 
 # coverage
 .coverage
+coverage.xml
 coverage_html_report
 
 # Byte-compiled / optimized / DLL files
@@ -22,11 +23,14 @@ tests/__pycache__/
 
 # Setuptools
 dist
+build
 
 # Python egg metadata, regenerated from source files by setuptools.
 *.egg-info
 
 # tox
 .tox
-build
-coverage.xml
+
+# testinf
+*.db
+*.xlsx
