--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,6 +37,7 @@ pytest-asyncio = "^0.20.2"
 pytest-console-scripts = "^1.3.1"
 pytest-cov = "^3.0.0"
 xlsxwriter = "^3.0.3"
+openpyxl = "^3.0.10"
 
 [build-system]
 build-backend = "poetry.core.masonry.api"
