--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,14 +15,13 @@ name = "kingspan-connect-sensor"
 packages = [{include = "connectsensor", from = "src"}]
 readme = "README.md"
 repository = "https://github.com/masaccio/kingspan-connect-sensor"
-version = "2.0.1"
+version = "2.0.2"
 
 [tool.poetry.dependencies]
 async-property = "^0.2.1"
 asyncio = "^3.4.3"
 datetime = "^4.7"
-httpx = "^0.23.1"
-# logging = "^0.4.9.6"
+httpx = "=0.23.0"
 pandas = "^1.5.1"
 pytest = "7.1.3"
 python = "^3.9"
