--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,7 @@ name = "kingspan-connect-sensor"
 packages = [{include = "connectsensor", from = "src"}]
 readme = "README.md"
 repository = "https://github.com/masaccio/kingspan-connect-sensor"
-version = "2.0.2"
+version = "2.0.3"
 
 [tool.poetry.dependencies]
 async-property = "^0.2.1"
@@ -23,7 +23,7 @@ asyncio = "^3.4.3"
 datetime = "^4.7"
 httpx = "=0.23.0"
 pandas = "^1.5.1"
-pytest = "7.1.3"
+pytest = "^7.1"
 python = "^3.9"
 requests = "^2.28.1"
 zeep = "^4.2.0"
