Relax httpx version

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,7 +21,7 @@ version = "2.0.3"
 async-property = "^0.2.1"
 asyncio = "^3.4.3"
 datetime = "^4.7"
-httpx = "=0.23.0"
+httpx = "^0.23.0"
 pandas = "^1.5.1"
 pytest = "^7.1"
 python = "^3.9"
