--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,20 +22,23 @@ async-property = "^0.2.1"
 asyncio = "^3.4.3"
 datetime = "^4.7"
 httpx = "^0"
-python = "^3.9"
+python = ">=3.10,<4.0"
 requests = "^2.28.1"
+lxml = ">=5.3" # Actually a Zeep dependency but need to force version
 zeep = "^4.2.0"
 
 [tool.poetry.group.dev.dependencies]
 aiofiles = "^22.1.0"
 black = {version = "^22.10.0", allow-prereleases = true}
 openpyxl = "^3.0.10"
-pandas = "^1.4.3"
+pandas = ">=2.2.0"
 pytest = "^7.1.0"
 pytest-asyncio = "^0.20.2"
 pytest-console-scripts = "^1.3.1"
 pytest-cov = "^3.0.0"
 xlsxwriter = "^3.0.3"
+ruff = "^0.7.1"
+tox = "^4.23.2"
 
 [build-system]
 build-backend = "poetry.core.masonry.api"
@@ -62,7 +65,7 @@ testpaths = ["tests"]
 legacy_tox_ini = """
 [tox]
 isolated_build = true
-envlist = py39, py310, py311
+envlist = py310, py311, py312, py313
 [testenv]
 allowlist_externals = poetry
 commands_pre = poetry install --no-root --sync
