--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,7 @@ name = "kingspan-connect-sensor"
 packages = [{include = "connectsensor", from = "src"}]
 readme = "README.md"
 repository = "https://github.com/masaccio/kingspan-connect-sensor"
-version = "3.0.5"
+version = "3.0.6"
 
 [tool.poetry.dependencies]
 async-property = "^0.2.1"
@@ -39,6 +39,7 @@ pytest-cov = "^3.0.0"
 xlsxwriter = "^3.0.3"
 ruff = "^0.7.1"
 tox = "^4.23.2"
+mypy = "^1.14.1"
 
 [build-system]
 build-backend = "poetry.core.masonry.api"
