--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,14 +5,12 @@
         "editor.wordWrapColumn": 100,
         "editor.defaultFormatter": "ms-python.black-formatter"
     },
-    "python.formatting.provider": "none",
-    "python.linting.enabled": true,
-    "python.linting.lintOnSave": true,
-    "black-formatter.args": [],
-    "python.testing.pytestArgs": [
-        "tests"
-    ],
-    "python.analysis.typeCheckingMode": "standard",
     "python.testing.pytestEnabled": true,
-    "python.testing.unittestEnabled": false
+    "python.testing.unittestEnabled": false,
+    "python.testing.pytestArgs": [
+        "--no-cov",
+        "-o",
+        "log_cli=True",
+        "--log-cli-level=ERROR",
+    ],
 }
