--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,7 @@
     },
     "python.testing.pytestEnabled": true,
     "python.testing.unittestEnabled": false,
+    "python.analysis.typeCheckingMode": "basic",
     "python.testing.pytestArgs": [
         "--no-cov",
         "-o",
