--- a/.github/workflows/code-coverage.yml
+++ b/.github/workflows/code-coverage.yml
@@ -15,7 +15,7 @@ jobs:
           python-version: '3.12'
 
       - name: Install the project
-        run: uv sync --locked --all-extras --dev --group docs
+        run: uv sync --locked --all-extras --dev
 
       - name: Generate coverage report
         run: uv run pytest  -n logical --cov=connectsensor --cov-report=xml
