--- a/pyproject.toml
+++ b/pyproject.toml
@@ -102,4 +102,4 @@ ban-relative-imports = "all"
 
 [tool.ruff.lint.per-file-ignores]
 "tests/**" = ["PLR2004", "S101", "D101", "D102", "D103", "ANN201", "ANN001"]
-"src/connectsensor/_*" = ["T201", "PTH111", "PTH120", "PTH100"]
+"src/connectsensor/_*" = ["T201", "PTH*"]
