--- a/.github/workflows/run-all-tests.yml
+++ b/.github/workflows/run-all-tests.yml
@@ -2,9 +2,9 @@ name: All tests
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "main", "v4.0"]
   pull_request:
-    branches: [ "main" ]
+    branches: [ "main", "v4.0" ]
   workflow_dispatch:
 
 jobs:
