--- a/pyproject.toml
+++ b/pyproject.toml
@@ -99,5 +99,4 @@ max-branches = 20
 ban-relative-imports = "all"
 
 [tool.ruff.lint.per-file-ignores]
-"tests/**" = ["PLR2004", "S101", "D101", "D102", "D103", "ANN201", "ANN001"]
-"src/connectsensor/_*" = ["T201", "PTH*"]
+"tests/**" = ["PLR2004", "S101", "D100", "D101", "D102", "D103", "ANN201", "ANN001", "PTH123"]
